--- a/python_indrajala/examples/s_time_plot.ipynb
+++ b/python_indrajala/examples/s_time_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,20 @@
     "        rect: (x_min, y_min, x_max, y_max) of the plot in data coordinates, gets mapped to canvas' device coordinates\n",
     "        pixel_scale: scale of the plot in pixels per device coordinate\n",
     "        \"\"\"\n",
-    "        self.axis_x1_border = 10\n",
-    "        self.axis_x2_border = 10\n",
-    "        self.axis_y_border = 20\n",
+    "        self.axis_x1_border = 60\n",
+    "        self.axis_x2_border = 50\n",
+    "        self.axis_y_border = 40\n",
+    "        self.title_border = 30\n",
     "        self.size = size\n",
+    "        self.border = border\n",
     "\n",
-    "        if border is None:\n",
-    "            border = (0, 0, 0, 0)\n",
-    "        self.canvas = (border[0]+self.axis_x1_border, border[1], size[0] - border[2] - self.axis_x2_border, size[1] - border[3])\n",
-    "\n",
+    "        if self.border is None:\n",
+    "            self.border = (0, 0, 0, 0)\n",
+    "        self.canvas = (self.border[0]+self.axis_x1_border, \n",
+    "                       self.size[1] - (self.border[1] + self.axis_y_border), \n",
+    "                       self.size[0] - (self.axis_x2_border + self.axis_x1_border), \n",
+    "                       self.size[1] - (self.size[1] - (self.border[3] + self.title_border)))\n",
+    "        print(self.canvas, self.size)\n",
     "        self.rect = rect\n",
     "\n",
     "        self.arrow_height = 8\n",
@@ -42,8 +47,8 @@
     "        self.pixel_scale = pixel_scale\n",
     "        self.d.set_pixel_scale(pixel_scale)\n",
     "\n",
-    "        self.d.append(draw.Rectangle(0, 0, size[0], size[1], fill='yellow'))\n",
-    "        self.d.append(draw.Rectangle(self.canvas[0], self.canvas[1], self.canvas[2], self.canvas[3], fill='white'))\n",
+    "        self.d.append(draw.Rectangle(0, 0, size[0], size[1], fill='white', stroke='black'))\n",
+    "        self.d.append(draw.Rectangle(self.canvas[0], self.canvas[3], self.canvas[2] - self.canvas[0], self.canvas[1] - self.canvas[3], fill='white', stroke='gray'))\n",
     "\n",
     "    def scale_x(self, x):\n",
     "        return (x - self.rect[0]) / (self.rect[2] - self.rect[0]) * (self.canvas[2] - self.canvas[0]) + self.canvas[0]\n",
@@ -51,11 +56,11 @@
     "    def scale_y(self, y):\n",
     "        return self.size[1] - ((y - self.rect[1]) / (self.rect[3] - self.rect[1]) * (self.canvas[3] - self.canvas[1]) + self.canvas[1])\n",
     "    \n",
-    "    def scale_xc(self, x):\n",
-    "        return (x - self.canvas[0]) / (self.canvas[2] - self.canvas[0]) * (self.rect[2] - self.rect[0]) + self.rect[0]\n",
+    "    def scale_xc(self, xc):\n",
+    "        return (xc - self.canvas[0]) / (self.canvas[2] - self.canvas[0]) * (self.rect[2] - self.rect[0]) + self.rect[0]\n",
     "    \n",
-    "    def scale_yc(self, y):\n",
-    "        return ((self.size[1] -y) - self.canvas[1]) / (self.canvas[3] - self.canvas[1]) * (self.rect[3] - self.rect[1]) + self.rect[1]\n",
+    "    def scale_yc(self, yc):\n",
+    "        return ((self.size[1] - yc) - self.canvas[1]) / (self.canvas[3] - self.canvas[1]) * (self.rect[3] - self.rect[1]) + self.rect[1]\n",
     "    \n",
     "    def scale_point(self, x, y):\n",
     "        return (self.scale_x(x), self.scale_y(y))\n",
@@ -81,24 +86,29 @@
     "            y_arrow_tipc = self.scale_point(*y_arrow_tip)\n",
     "            for d in range(-self.arrow_width, self.arrow_width+1):\n",
     "                self.add_linec(*x_arrow_tipc, x_arrow_tipc[0] - self.arrow_height, x_arrow_tipc[1] - d)\n",
-    "                self.add_linec(*y_arrow_tipc, y_arrow_tipc[0] - d, y_arrow_tipc[1] + self.arrow_height)\n",
-    "            # self.add_linec(*x_arrow_tipc, x_arrow_tipc[0] - 10, x_arrow_tipc[1] + 5)\n",
-    "            # self.add_linec(*y_arrow_tipc, y_arrow_tipc[0] + 5, y_arrow_tipc[1] + 10)\n",
-    "            \n"
+    "                self.add_linec(*y_arrow_tipc, y_arrow_tipc[0] - d, y_arrow_tipc[1] + self.arrow_height)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(65, 255, 690, 35) (800, 300)\n"
+     ]
+    }
+   ],
    "source": [
     "pl = SPlotter(size=(800, 300), border=(5,5,5,5), rect=(-10, -10, 10, 10), pixel_scale=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -109,31 +119,31 @@
        "     width=\"800\" height=\"300\" viewBox=\"0 0 800 300\">\n",
        "<defs>\n",
        "</defs>\n",
-       "<rect x=\"0\" y=\"0\" width=\"800\" height=\"300\" fill=\"yellow\" />\n",
-       "<rect x=\"15\" y=\"5\" width=\"785\" height=\"295\" fill=\"white\" />\n",
-       "<path d=\"M15.0,150.0 L785.0,150.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,295.0 L400.0,5.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,153.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L403.0,13.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,152.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L402.0,13.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,151.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L401.0,13.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,150.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L400.0,13.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,149.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L399.0,13.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,148.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L398.0,13.0\" stroke=\"gray\" />\n",
-       "<path d=\"M785.0,150.0 L777.0,147.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,5.0 L397.0,13.0\" stroke=\"gray\" />\n",
+       "<rect x=\"0\" y=\"0\" width=\"800\" height=\"300\" fill=\"white\" stroke=\"black\" />\n",
+       "<rect x=\"65\" y=\"35\" width=\"625\" height=\"220\" fill=\"white\" stroke=\"gray\" />\n",
+       "<path d=\"M65.0,155.0 L690.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,45.0 L377.5,265.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,158.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L380.5,273.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,157.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L379.5,273.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,156.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L378.5,273.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L377.5,273.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,154.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L376.5,273.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,153.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L375.5,273.0\" stroke=\"gray\" />\n",
+       "<path d=\"M690.0,155.0 L682.0,152.0\" stroke=\"gray\" />\n",
+       "<path d=\"M377.5,265.0 L374.5,273.0\" stroke=\"gray\" />\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x7f61e723be90>"
+       "<drawsvg.drawing.Drawing at 0x7f61e7133a90>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,6 +152,13 @@
     "pl.add_axis(arrows=True)\n",
     "pl.d"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
