--- a/python_indrajala/examples/s_time_plot.ipynb
+++ b/python_indrajala/examples/s_time_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SPlotter:\n",
-    "    def __init__(self, size, border=None, rect=None, pixel_scale=1):\n",
+    "    def __init__(self, size, border=None, rect=None, pixel_scale=1.0):\n",
     "        \"\"\"\n",
     "        size: (width, height) of the plot in device coordinates\n",
     "        border: (left, top, right, bottom) of the plot in device coordinates\n",
@@ -34,7 +34,7 @@
     "            self.border = (0, 0, 0, 0)\n",
     "        self.canvas = (self.border[0]+self.axis_x1_border, \n",
     "                       self.size[1] - (self.border[1] + self.axis_y_border), \n",
-    "                       self.size[0] - (self.axis_x2_border + self.axis_x1_border), \n",
+    "                       self.size[0] - (self.border[2]+ self.axis_x2_border + self.axis_x1_border), \n",
     "                       self.size[1] - (self.size[1] - (self.border[3] + self.title_border)))\n",
     "        print(self.canvas, self.size)\n",
     "        self.rect = rect\n",
@@ -48,7 +48,7 @@
     "        self.d.set_pixel_scale(pixel_scale)\n",
     "\n",
     "        self.d.append(draw.Rectangle(0, 0, size[0], size[1], fill='white', stroke='black'))\n",
-    "        self.d.append(draw.Rectangle(self.canvas[0], self.canvas[3], self.canvas[2] - self.canvas[0], self.canvas[1] - self.canvas[3], fill='white', stroke='gray'))\n",
+    "        self.d.append(draw.Rectangle(self.canvas[0], self.size[1]-self.canvas[1], self.canvas[2] - self.canvas[0], (self.canvas[1] - self.canvas[3]), fill='white', stroke='gray'))\n",
     "\n",
     "    def scale_x(self, x):\n",
     "        return (x - self.rect[0]) / (self.rect[2] - self.rect[0]) * (self.canvas[2] - self.canvas[0]) + self.canvas[0]\n",
@@ -68,6 +68,10 @@
     "    def scale_pointc(self, x, y):\n",
     "        return (self.scale_xc(x), self.scale_yc(y))\n",
     "    \n",
+    "    def add_text(self, x, y, text, font_size=12, font_family='Verdana'):\n",
+    "        xc, yc = self.scale_point(x, y)\n",
+    "        self.d.append(draw.Text(text, font_size, xc, yc, center=True, font_family=font_family))\n",
+    "    \n",
     "    def add_line(self, x1, y1, x2, y2):\n",
     "        xc1, yc1 = self.scale_point(x1, y1)\n",
     "        xc2, yc2 = self.scale_point(x2, y2)\n",
@@ -81,7 +85,7 @@
     "        self.add_line(0, self.rect[1], 0, self.rect[3])\n",
     "        if arrows is True:\n",
     "            x_arrow_tip = (self.rect[2], 0)\n",
-    "            y_arrow_tip = (0, self.rect[3])\n",
+    "            y_arrow_tip = (0, self.rect[1])\n",
     "            x_arrow_tipc = self.scale_point(*x_arrow_tip)\n",
     "            y_arrow_tipc = self.scale_point(*y_arrow_tip)\n",
     "            for d in range(-self.arrow_width, self.arrow_width+1):\n",
@@ -91,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(65, 255, 690, 35) (800, 300)\n"
+      "(65, 255, 685, 35) (800, 300)\n"
      ]
     }
    ],
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -120,36 +124,78 @@
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"800\" height=\"300\" fill=\"white\" stroke=\"black\" />\n",
-       "<rect x=\"65\" y=\"35\" width=\"625\" height=\"220\" fill=\"white\" stroke=\"gray\" />\n",
-       "<path d=\"M65.0,155.0 L690.0,155.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,45.0 L377.5,265.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,158.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L380.5,273.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,157.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L379.5,273.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,156.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L378.5,273.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,155.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L377.5,273.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,154.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L376.5,273.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,153.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L375.5,273.0\" stroke=\"gray\" />\n",
-       "<path d=\"M690.0,155.0 L682.0,152.0\" stroke=\"gray\" />\n",
-       "<path d=\"M377.5,265.0 L374.5,273.0\" stroke=\"gray\" />\n",
+       "<rect x=\"65\" y=\"45\" width=\"620\" height=\"220\" fill=\"white\" stroke=\"gray\" />\n",
+       "<path d=\"M65.0,155.0 L685.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L375.0,265.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,158.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L378.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,157.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L377.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,156.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L376.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L375.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,154.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L374.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,153.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L373.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,152.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L372.0,53.0\" stroke=\"gray\" />\n",
+       "<text x=\"375.0\" y=\"265.0\" font-size=\"12\" font-family=\"Verdana\" text-anchor=\"middle\" dominant-baseline=\"central\">x</text>\n",
+       "<path d=\"M65.0,155.0 L685.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L375.0,265.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,158.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L378.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,157.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L377.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,156.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L376.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L375.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,154.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L374.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,153.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L373.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,152.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L372.0,53.0\" stroke=\"gray\" />\n",
+       "<text x=\"375.0\" y=\"265.0\" font-size=\"12\" font-family=\"Verdana\" text-anchor=\"middle\" dominant-baseline=\"central\">0,10</text>\n",
+       "<path d=\"M65.0,155.0 L685.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L375.0,265.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,158.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L378.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,157.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L377.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,156.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L376.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,155.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L375.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,154.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L374.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,153.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L373.0,53.0\" stroke=\"gray\" />\n",
+       "<path d=\"M685.0,155.0 L677.0,152.0\" stroke=\"gray\" />\n",
+       "<path d=\"M375.0,45.0 L372.0,53.0\" stroke=\"gray\" />\n",
+       "<text x=\"375.0\" y=\"265.0\" font-size=\"12\" font-family=\"Verdana\" text-anchor=\"middle\" dominant-baseline=\"central\">0,10</text>\n",
+       "<text x=\"685.0\" y=\"155.0\" font-size=\"12\" font-family=\"Verdana\" text-anchor=\"middle\" dominant-baseline=\"central\">10,0</text>\n",
+       "<text x=\"65.0\" y=\"155.0\" font-size=\"12\" font-family=\"Verdana\" text-anchor=\"middle\" dominant-baseline=\"central\">-10,0</text>\n",
+       "<text x=\"375.0\" y=\"45.0\" font-size=\"12\" font-family=\"Verdana\" text-anchor=\"middle\" dominant-baseline=\"central\">0,-10</text>\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x7f61e7133a90>"
+       "<drawsvg.drawing.Drawing at 0x7ffad0373f50>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pl.add_axis(arrows=True)\n",
+    "pl.add_text(0, 10, '0,10', font_size=12, font_family='Verdana')\n",
+    "pl.add_text(10, 0, '10,0', font_size=12, font_family='Verdana')\n",
+    "pl.add_text(-10, 0, '-10,0', font_size=12, font_family='Verdana')\n",
+    "pl.add_text(0, -10, '0,-10', font_size=12, font_family='Verdana')\n",
     "pl.d"
    ]
   },
