--- a/python_indrajala/examples/s_time_plot.ipynb
+++ b/python_indrajala/examples/s_time_plot.ipynb
@@ -2,20 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import drawsvg as draw"
+    "import drawsvg as draw\n",
+    "import operator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.0, 200.0, 400.0, 0.0) (20.0, 190.0, 370.0, 50.0)\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
+       "     width=\"400.0\" height=\"200.0\" viewBox=\"0 0 400 200\">\n",
+       "<defs>\n",
+       "</defs>\n",
+       "<rect x=\"0.0\" y=\"0.0\" width=\"400.0\" height=\"200.0\" fill=\"white\" stroke=\"black\" />\n",
+       "<rect x=\"20.0\" y=\"50.0\" width=\"350.0\" height=\"140.0\" fill=\"blue\" stroke=\"red\" />\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<drawsvg.drawing.Drawing at 0x7f13f1c84d50>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class TRF:\n",
+    "    def __init__(self, x0, x1, xn0, xn1):\n",
+    "        self.x0 = x0\n",
+    "        self.x1 = x1\n",
+    "        self.xn0 = xn0\n",
+    "        self.xn1 = xn1\n",
+    "\n",
+    "    def o2n(self, x):\n",
+    "        return self.xn0 + (x - self.x0) / (self.x1 - self.x0) * (self.xn1 - self.xn0)\n",
+    "    \n",
+    "    def n2o(self, xn):\n",
+    "        return self.x0 + (xn - self.xn0) / (self.xn1 - self.xn0) * (self.x1 - self.x0)\n",
+    "    \n",
+    "    # define add for TRF:\n",
+    "    def __add__(self, other):\n",
+    "        return TRF(self.x0, self.x1, self.xn0 + other.xn0, self.xn1 + other.xn1)\n",
+    "    \n",
+    "class SPlotter:\n",
+    "    def __init__(self, size, border=None, rect=None, pixel_scale=1.0):\n",
+    "        self.size = size\n",
+    "        self.trf_xph = TRF(0, size[0], 0, size[0])\n",
+    "        self.trf_yph = TRF(0, size[1], size[1], 0)\n",
+    "\n",
+    "        self.canvas = draw.Drawing(size[0], size[1], origin=(0,0))\n",
+    "        self.pixel_scale = pixel_scale\n",
+    "        self.canvas.set_pixel_scale(pixel_scale)\n",
+    "\n",
+    "        self.canvas_area = (self.trf_xph.o2n(0), self.trf_yph.o2n(0), self.trf_xph.o2n(size[0]), self.trf_yph.o2n(size[1]))\n",
+    "        self.border = border\n",
+    "                            \n",
+    "        self.plot_area = (self.canvas_area[0] + self.border[0], self.canvas_area[1] - self.border[1], self.canvas_area[2] - self.border[2], self.canvas_area[3] + self.border[3])\n",
+    "\n",
+    "sp = SPlotter(size=(400,200), border=(20,10,30,50))\n",
+    "print(sp.canvas_area, sp.plot_area)\n",
+    "sp.canvas.append(draw.Rectangle(sp.canvas_area[0], sp.canvas_area[3], sp.canvas_area[2]-sp.canvas_area[0], -sp.canvas_area[3]+sp.canvas_area[1], fill='white', stroke='black'))\n",
+    "sp.canvas.append(draw.Rectangle(sp.plot_area[0], sp.plot_area[3], sp.plot_area[2]-sp.plot_area[0], -sp.plot_area[3]+sp.plot_area[1], fill='blue', stroke='red'))\n",
+    "sp.canvas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SPlotter:\n",
+    "\n",
+    "\n",
+    "class SPlotterOld:\n",
     "    def __init__(self, size, border=None, rect=None, pixel_scale=1.0):\n",
     "        \"\"\"\n",
     "        size: (width, height) of the plot in device coordinates\n",
